# central-core-mqtt-shared

./: .env.example  .gitignore  Makefile  README.md  README_AI.md  pyproject.toml
.github/workflows/: tests.yml
central_core_mqtt_shared/: __init__.py  schemas.py  topics.py
central_core_mqtt_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
central_core_mqtt_shared/ha/: __init__.py  discovery.py
docs/: TDD.md
tests/: test_discovery_async.py  test_discovery_unit.py  test_schemas.py  test_topics.py
