[project]
name = "central-core-mqtt-shared"
version = "1.0.0"
description = "Shared MQTT protocol definitions for central-core hubs, vault, and addon."
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-mock",
]
